...
           configureWebView()
           presenter?.viewDidLoad()
       }

       private func configureWebView() {
           webView.navigationDelegate = self
           webView.accessibilityIdentifier = "UnsplashWebView"
           estimatedProgressObservation = webView.observe(\.estimatedProgress, options: []) { [weak self] _, _ in
               self?.handleEstimatedProgressUpdate()
           }
       }

    private func handleEstimatedProgressUpdate() {
...
